--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,4 +31,5 @@ set(CMAKE_CXX_CLANG_TIDY
 
 include(.doxygen/CMake_Doxygen.txt)
 
-add_executable(main_hello src/main_hello.cpp)
+add_executable(main_hello src/main_hello.cpp
+        src/config.h)
