--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -20,9 +20,9 @@ include_directories (${Boost_INCLUDE_DIRS})
 if (Boost_UNIT_TEST_FRAMEWORK_FOUND)
    message(STATUS "Generating unit tests using BOOST Unit Test Framework")
 
-   set(SOURCE_FILES_GENERAL ../src/config.h ../src/Utility/Random.h ../src/Utility/Random.cpp ../src/Utility/Trim.h ../src/Utility/Trim.cpp ../src/Utility/Name.h ../src/Utility/Name.cpp ../src/Utility/Gender.h ../src/Utility/Gender.cpp ../src/Utility/Weight.h ../src/Utility/Weight.cpp)
-   set(ANIMAL_FILES ../src/Animal/Animal.h ../src/Animal/Animal.cpp )
-   set(BOOST_TESTS          test_Animal.cpp test_Random.cpp test_Trim.cpp test_Name.cpp test_Gender.cpp test_Weight.cpp)
+   set(SOURCE_FILES_GENERAL ../src/config.h ../src/Utility/Color.h ../src/Utility/Color.cpp ../src/Utility/Random.h ../src/Utility/Random.cpp ../src/Utility/Trim.h ../src/Utility/Trim.cpp ../src/Utility/Name.h ../src/Utility/Name.cpp ../src/Utility/Gender.h ../src/Utility/Gender.cpp ../src/Utility/Weight.h ../src/Utility/Weight.cpp)
+   set(ANIMAL_FILES ../src/Animal/Animal.h ../src/Animal/Animal.cpp ../src/Animal/Mammal/Mammal.h ../src/Animal/Mammal/Mammal.cpp ../src/Animal/Mammal/Cat/Cat.h ../src/Animal/Mammal/Cat/Cat.cpp )
+   set(BOOST_TESTS test_Animal.cpp test_Cat.cpp test_Gender.cpp test_Name.cpp test_Random.cpp test_Trim.cpp test_Weight.cpp)
 
    add_executable (All_Boost_Tests ${SOURCE_FILES_GENERAL} ${ANIMAL_FILES} ${BOOST_TESTS})
    target_link_libraries (All_Boost_Tests ${Boost_LIBRARIES})
